<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!--    <include-->
    <!--        android:id="@+id/toolbar"-->
    <!--        layout="@layout/toolbar_profile" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_launcher_foreground"
                app:civ_border_color="#FF000000" />

            <com.example.myapplication.custom.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:text="Hi, John"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </LinearLayout>

        <com.example.myapplication.custom.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/search_main_title"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/rectangle_white"
            android:orientation="horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:src="@drawable/ic_search"
                android:tint="#d0d0d0" />

            <com.example.myapplication.custom.MyEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:hint="@string/search_box_text"
                android:textColor="@color/main_text"
                android:textColorHint="@color/hint_gray"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginRight="15dp"
                android:src="@mipmap/ic_places"
                android:tint="#d22532" />
        </LinearLayout>

        <com.example.myapplication.custom.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:background="@drawable/rectangle_orange"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:text="@string/search_button"
            android:textColor="#ffffff"
            android:textSize="14.4sp" />
    </LinearLayout>

    <!--    <com.roughike.bottombar.BottomBar-->
    <!--        android:id="@+id/bottomBar"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="60dp"-->
    <!--        android:layout_alignParentBottom="true"-->
    <!--        app:bb_tabXmlResource="@xml/bottombar" />-->


</RelativeLayout>
