<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--            <include-->
            <!--                android:id="@+id/view_toolbar"-->
            <!--                layout="@layout/toolbar_back_arrow_white" />-->

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@mipmap/signinbg"
                android:scaleType="centerCrop" />

            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="140dp"
                android:src="@mipmap/ic_launcher" />

            <!--            <LinearLayout-->
            <!--                android:id="@+id/logo"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_marginTop="70dp"-->
            <!--                android:orientation="vertical">-->

            <!--                <TextView-->
            <!--                    android:id="@+id/head"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:gravity="center"-->
            <!--                    android:text="@string/app_name"-->
            <!--                    android:textColor="#fff"-->
            <!--                    android:textSize="34dp" />-->

            <!--            </LinearLayout>-->


            <LinearLayout
                android:id="@+id/ll_logoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="70dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.example.myapplication.custom.MyTextViewBold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dronam"
                    android:textAllCaps="true"
                    android:textColor="#ffffff"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="34dp"
                    android:layout_marginLeft="9dp"
                    android:layout_marginTop="5dp"
                    android:background="#ffffff" />

                <com.example.myapplication.custom.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="9dp"
                    android:text="@string/food_delivery"
                    android:textColor="#f05421"
                    android:textSize="20sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_icon"
                android:layout_margin="30dp"
                android:orientation="vertical">

                <com.example.myapplication.custom.MyTextView
                    android:id="@+id/tv_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/get_started_with_mobile"
                    android:textColor="@color/main_text"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/ll_mobileNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_text"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                    <com.example.myapplication.custom.MyEditText
                        android:id="@+id/et_mobileNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#0000"
                        android:gravity="left"
                        android:hint="@string/mobile_number"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:lines="1"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:nextFocusForward="@+id/et_fname"
                        android:padding="16dp"
                        android:textColor="@color/main_text"
                        android:textColorHint="@color/hint_gray"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="#dad8d8" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_nameDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_mobileNo"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:id="@+id/ll_fname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_text"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.example.myapplication.custom.MyEditText
                            android:id="@+id/et_fname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#0000"
                            android:hint="@string/first_name"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:nextFocusForward="@+id/et_lname"
                            android:padding="16dp"
                            android:textColor="@color/main_text"
                            android:textColorHint="@color/hint_gray"
                            android:textSize="16sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="#dad8d8" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_lname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_text"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.example.myapplication.custom.MyEditText
                            android:id="@+id/et_lname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#0000"
                            android:hint="@string/last_name"
                            android:imeOptions="actionDone"
                            android:inputType="text"
                            android:padding="16dp"
                            android:textColor="@color/main_text"
                            android:textColorHint="@color/hint_gray"
                            android:textSize="16sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="#dad8d8" />

                    </LinearLayout>

                </LinearLayout>

<!--                <TextView-->
<!--                    android:id="@+id/tv_signIn"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginBottom="25dp"-->
<!--                    android:layout_marginLeft="120dp"-->
<!--                    android:layout_marginRight="120dp"-->
<!--                    android:layout_marginTop="40dp"-->
<!--                    android:layout_below="@+id/ll_nameDetails"-->
<!--                    android:background="@color/colorPrimaryDark"-->
<!--                    android:gravity="center"-->
<!--                    android:padding="9dp"-->
<!--                    android:text="Sign in"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:textSize="16dp" />-->


                                <LinearLayout
                    android:id="@+id/ll_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_nameDetails"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/rectangle_blue"
                    android:gravity="right"
                    android:orientation="vertical"
                    android:padding="14dp">

                    <com.example.myapplication.custom.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Confirm"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
